--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100px;
+  height: 80px;
+  margin-bottom: 50px;
 }
 
 .header-logo {
@@ -12,4 +13,21 @@
   &:hover {
     color: #1f41bb;
   }
+}
+
+.header-avatar {
+  background-color: #1f41bb;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #3e5fcd;
+  }
+}
+
+.header-menu {
+  margin-top: 30px;
+}
+
+.header__icons-container {
+  margin-top: 30px;
 }
