--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -1,8 +1,3 @@
-.catalog__card-button {
-  height: 50px;
-  background-color: #1f41bb;
-}
-
 .catalog__card-image {
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
@@ -16,4 +11,27 @@
   width: 300px;
   height: 300px;
   overflow: hidden;
+}
+
+.catalog__card-button {
+  border: 1px solid #1f41bb;
+  border-radius: 50px;
+  width: 30px;
+  padding: 6px;
+  transition: background-color 0.1s ease;
+
+  &:hover {
+    border: 1px solid #3e5fcd;
+  }
+
+  &:disabled {
+    background-color: #e6e6e6;
+    color: #b0b0b0;
+    border: 1px solid #b0b0b0;
+    cursor: not-allowed;
+  }
+}
+
+.price-cart__container {
+  padding: 5px;
 }
